Fixes container margin causing horizontal scrollbar + styled-components unique naming in html
* Fixes margin to stop horizontal scrollbar appearing
* Adds babel-plugin-styled-components so the styled-component name is displayed in the html
    - Without it, styled-components creates unique identifier classname

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+html {
+    margin: 0;
+}
+
 #page-body {
     text-align: left;
-    width: 60%;
+    width: 60vw;
     margin: auto;
 }
